--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
           <p class="norse">Tractor Pull</p>
         </div>
       </div>
+
       <div class="right">
         <div class="ad-text">
           <p>
@@ -24,6 +25,34 @@
           </p>
           <p>Sign up today and let's get ready to <em>pull!</em></p>
         </div>
+
+        <div class="form-area">
+          <form action="#" method="get">
+            <label for="first_name">First Name</label>
+            <input type="text" id="first_name" name="first_name" />
+
+            <label for="last_name">Last Name</label>
+            <input type="text" id="last_name" name="last_name" />
+
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" />
+
+            <label for="phone">Phone Number</label>
+            <input type="number" name="phone" id="phone" />
+
+            <label for="password">Password</label>
+            <input type="password" name="password" id="password" />
+
+            <label for="confirm-password">Confirm Password</label>
+            <input
+              type="password"
+              name="confirm-password"
+              id="confirm-password"
+            />
+          </form>
+        </div>
+
+        <div class="button-area"></div>
       </div>
     </div>
   </body>
