--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
           </form>
         </div>
 
-        <div class="button-area"></div>
+        <div class="button-area">
+          <button type="submit">Create Account</button>
+          <p>Already have an account? <a href="#">Log in</a></p>
+        </div>
       </div>
     </div>
   </body>
