--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
 
         <div class="form-area">
-          <h2>Let's pull your details!</h2>
+          <div class="heading">Let's pull your details!</div>
           <form action="#" method="get">
             <div class="form-left">
               <div class="pair">
@@ -87,7 +87,7 @@
         </div>
 
         <div class="button-area">
-          <button type="submit">Create Account</button>
+          <button class="submit-btn" type="submit">Create Account</button>
           <p>Already have an account? <a href="#">Log in</a></p>
         </div>
       </div>
