--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <div class="form-area">
           <div class="heading">Let's pull your details!</div>
-          <form action="#" method="get">
+          <form id="form1" action="#" method="get">
             <div class="form-left">
               <div class="pair">
                 <label for="first_name">First Name</label>
@@ -100,7 +100,9 @@
         </div>
 
         <div class="button-area">
-          <button class="submit-btn" type="submit">Create Account</button>
+          <button class="submit-btn" type="submit" form="form1">
+            Create Account
+          </button>
           <p>Already have an account? <a href="#">Log in</a></p>
         </div>
       </div>
